document tech stack and structure